Fix color contrast

--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -79,7 +79,8 @@ img {
 
 button:not(.checkout) {
   border: 0;
-  background-color: rgb(248, 116, 138);
+  /*background-color: rgb(248, 116, 138);*/
+  background-color: rgba(238, 13, 50, 0.745);
   border-radius:0.7em 0;
   color: white;
   font-size: 1.2em;
